# ConfereeTgBot

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.local.gmeet.yml  docker-compose.local.meetsaver.yml  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-prod.yml
ConfereeBot/: config.py  run.py
ConfereeBot/app/: handlers.py
app/: __main__.py  bot.py  filters.py  keyboards.py
app/config/: config.py  labels.py  messages.py  roles.py
app/database/: admin_db_operations.py  conference_db_operations.py  database.py  meeting_db_operations.py  recording_db_operations.py  tag_db_operations.py  user_db_operations.py
app/database/db_operations/: conference_db_operations.py  recording_db_operations.py  tag_db_operations.py  user_db_operations.py
app/database/models/: admin_DBO.py  conference_DBO.py  meeting_DBO.py  recording_DBO.py  tag_DBO.py  user_DBO.py
app/handlers/: tag_handler.py
app/middlewares/: logging.py
app/rabbitmq/: __init__.py  func.py  responses.py
app/roles/: __init__.py  owner.py  user.py
app/roles/admin/: admin.py
app/roles/admin/recording_create/: recording_create.py
app/roles/admin/tags_management/handlers/: tags_create.py  tags_delete.py  tags_read.py  tags_update.py
app/roles/owner/: owner.py
app/roles/owner/admins_management/: admins_management.py
app/roles/user/: callbacks_enum.py  shared_callbacks.py  user_cmds.py
app/roles/user/main_actions/: shared_callbacks.py
app/roles/user/main_actions/admins_management/: admins_management.py
app/roles/user/main_actions/recording_create/: recording_create.py
app/roles/user/main_actions/recording_search/: conference_status.py  recording_search.py
app/roles/user/main_actions/tags_management/: tags_db_operations.py  tags_managment.py
app/utils/: __init__.py  logger.py
docs/: conferee_db_schema.drawio
meetsaver/: __main__.py
meetsaver/gmeet-bot/: __init__.py  __main__.py  gmeet.py
meetsaver/gmeet_bot/: __init__.py  __main__.py  gmeet.py
meetsaver/utils/: logger.py
(+5 files in other folders)
