[tool.poetry]
name = "confereebot"
version = "0.6.0"
description = "Tg bot for managing GMeetBot service"
authors = [
    "Shon Qwezon <shonzbso@gmail.com>",
    "Yuriy Magus <iuriimagus@gmail.com>"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.18.0"
motor = "^3.7.0"
httpx = "^0.28.1"
aiormq = "^6.8.1"
pamqp = "^3.2.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 99
lint.ignore = ["F403"]
